# blockchain

./: .gitignore  Cargo.toml
blocks/: .rdb.data  .rdb.index  db  snap.0000000000000479
src/: block.rs  blockchain.rs  cli.rs  main.rs  merkle.rs  proof_of_word.rs  proof_of_work.rs  transaction.rs  tx.rs  utxo.rs  wallet.rs  wallets.rs
src/network/: command.rs  mod.rs
tmp/: wallets.data
