[package]
name = "blockchain"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "2.0.1"
ethereum-types = "0.15.1"
readb = { version = "0.4.1", features = ["write"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
serde_json = "1.0.142"
sha2 = "0.10.9"
clap = { version = "4.5.45", features = ["derive"] }
hex = { version = "0.4.3" }
once_cell = { version = "1.21.3" }
base64 = { version = "0.22.1"}
k256 = {version = "0.13.4"}